--- a/sep08/index.html
+++ b/sep08/index.html
@@ -8,13 +8,11 @@
   <title>Soul train</title>
 </head>
 <body>
-<img src="img/logo.png" alt="">
  <header>
   <nav>
+    <h1><a href="#"><img src="img/logo.png" alt="">C<span>O</span>NNECT</a></h1>
     <ul>
-      <h1>CONNECT</h1>
-      <li><a href="#">800 555 7744</a></li>
-      <li><a href="#">Home</a></li>
+      <li class="active"><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Services</a></li>
       <li><a href="#">Gallery</a></li>
