sep26 sep28 sep29

--- a/sep26/index.html
+++ b/sep26/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
+  <title>The heavens are angry matt</title>
 </head>
 <body>
 <header>
   <nav>
+    <h3>Interphase</h3>
     <ul>
-      <li>Interphase</li>
       <li>Home</li>
       <li>Generic</li>
       <li>Elements</li>
@@ -28,6 +28,7 @@
     <h4 class="hill_3234">Consectetur adipisicing elit</h4>
     <h5 class="hill_3234">Lorem ipsum dolor sit. This is the end of the tranny of the third reich.</h5>
    </div>
+  <div class="fb">
   <div class="sabaton">
     <i class="fa fa-clock-o" aria-hidden="true"></i>
     <p class="ghost_division">It is time for you to wake up john. We need you to guide us out of the darkness.</p>
@@ -39,6 +40,7 @@
   <div class="sabaton">
     <i class="fa fa-user" aria-hidden="true"></i>
     <p class="ghost_division">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores cumque, dolorum. Deserunt vitae ipsa officiis commodi exercitationem. Officiis, at, porro. A repudiandae ratione est doloremque ad unde libero esse similique.</p>
+  </div>
   </div>
 </section>
 <section class="uprising">
