--- a/sep28/index.html
+++ b/sep28/index.html
@@ -12,7 +12,7 @@
   <nav>
     <h1>Breadth</h1>
     <ul>
-      <li>HOMEPAGE</li>
+      <li class="rawr">HOMEPAGE</li>
       <li>OUR CLIENTS</li>
       <li>ABOUT US</li>
       <li>CAREERS</li>
@@ -23,18 +23,44 @@
 <section class="compass">
 <div><img src="img/banner.jpg" /> </div>
 </section>
-
-
-
-
-
-
-
-
-
-
-
-
+<main class="colorback">
+<div>
+  <i class="fa fa-cogs" aria-hidden="true"></i>
+    <h4 class="white">Maecenas lectus sapien</h4>
+    <p>In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
+</div>
+<div>
+  <div class="white">
+  <i class="fa fa-gavel" aria-hidden="true"></i>
+    <h2>Praesent scelerisque</h2>
+  </div>
+    <p>In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
+</div>
+    <div>
+      <i class="fa fa-unlock" aria-hidden="true"></i>
+      <h2>Fusce ultrices fringilla</h2>
+      <p>In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
+      </div>
+      <div>
+        <i class="fa fa-wrench" aria-hidden="true"></i>
+          <h2>Etiam posuere augue</h2>
+        <p>In posuere eleifend odio. Quisque semper augue mattis wisi. Pellentesque viverra vulputate enim. Aliquam erat volutpat.</p>
+      </div>
+    </main>
+  <section class="camouflage">
+  <div>
+    <h2>Maecenas vitae orci vitae tellus feugiat eleifend</h2>
+    <span>Quisque dictum integer nisl risus, sagittis convallis, rutrum id, congue, and nibh</span>
+    <p>This is <strong>Breadth</strong>, a free, fully standards-compliant CSS template designed by <a href="#">TEMPLATED</a>. The photos in this template are from <a href="#"> Fotogrph</a>. This free template is released under the <a href="#">Creative Commons Attribution</a> license, so you're pretty much free to do whatever you want with it (even use it commercially) provided you give us credit for it. Have fun :) </p><div class="button">
+      <button><a href="#">Etiam posuere</a></button>
+    </div>
+  </div>
+  </section>
+<footer class="footer">
+<div>
+  <p class="footer34">© Untitled. All rights reserved. | Photos by <a class="white2" href="#">Fotogrph</a> | Design by <a class="white2" href="#">TEMPLATED</a>.</p>
+</div>
+</footer>
 <script src="http://localhost:35729/livereload.js"></script>
 </body>
 </html>
