octo12, john's catering, octo13

--- a/octo12/index.html
+++ b/octo12/index.html
@@ -29,16 +29,7 @@
      </form>
   </section>
 
-  <script>
-      var span = document.querySelectorAll('legend span');
-      //console.log(span);
-      for(var i = 0; i < span.length;i++){
-        span[i].addEventListener('click', function(){
-          //console.log(this);
-          this.classList.toggle('placeholder');
-        });
-      }
-  </script>
+  <script src="js/script.js"></script>
 
 </body>
 </html>
