--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,12 +20,19 @@
 <main>
   <h1>Rigoberto Padilla III</h1>
   <section>
+    <img class="picture" src="img/crop.jpg" alt="Picture of Rigo">
     <div>
-      <img src="img/crop.jpg" alt="Picture of Rigo">
       <h3>Bio</h3>
-      <p></p>
+      <p>Hello my soon to be employer or friend. My name is Rigoberto Padilla the third. I was born on October 2, 1999 in the great state of Califronia in the wonderful city of fresno. </p>
     </div>
   </section>
+  <aside>
+    <h3>This is Just one Picture</h3>
+    <img src="" alt="picture of my work">
+  </aside>
 </main>
+<footer>
+  <p>Copyright © 2016 - 2016 My Porfolio. All rights reserved.</p>
+</footer>
 </body>
 </html>
