--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,12 +8,15 @@
   <title>My portfolio</title>
 </head>
 <body>
+  <audio controls autoplay loop>
+    <source src="music/Dead_Or_Alive_-_You_Spin_Me_Round_(Like_a_Record).mp3" type="audio/mpeg">
+  </audio>
   <header>
     <nav>
       <ul>
-         <li><a href="#">Home /</a></li>
-         <li><a href="#"> Bio /</a></li>
-         <li><a href="#"> Contacts</a></li>
+         <li><a href="index.html">Home /</a></li>
+         <li><a href="works.html"> Works /</a></li>
+         <li><a href="contacts.html"> Contacts</a></li>
       </ul>
     </nav>
   </header>
@@ -26,10 +29,22 @@
       <p>Hello my soon to be employer or friend. My name is Rigoberto Padilla the third. I was born on October 2, 1999 in the great state of Califronia in the wonderful city of fresno. </p>
     </div>
   </section>
-  <aside>
-    <h3>This is Just one Picture</h3>
-    <img src="" alt="picture of my work">
-  </aside>
+  <section class="primo">
+    <div class="skills">
+      <h3>Skills</h3>
+      <ul>
+        <li>Micorsoft Word</li>
+        <li>Comunication</li>
+        <li></li>
+      </ul>
+    </div>
+    <div>
+      <h3>References</h3>
+      <ul>
+        <li>Benjamin</li>
+      </ul>
+    </div>
+  </section>
 </main>
 <footer>
   <p>Copyright © 2016 - 2016 My Porfolio. All rights reserved.</p>
