--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,9 +8,6 @@
   <title>My portfolio</title>
 </head>
 <body>
-  <audio controls autoplay loop>
-    <source src="music/Dead_Or_Alive_-_You_Spin_Me_Round_(Like_a_Record).mp3" type="audio/mpeg">
-  </audio>
   <header>
     <nav>
       <ul>
@@ -26,7 +23,7 @@
     <img class="picture" src="img/crop.jpg" alt="Picture of Rigo">
     <div>
       <h3>Bio</h3>
-      <p>Hello my soon to be employer or friend. My name is Rigoberto Padilla the third. I was born on October 2, 1999 in the great state of Califronia in the wonderful city of fresno. </p>
+      <p>Hello my soon to be employer or friend. My name is Rigoberto Padilla the third. I was born on October 2, 1999 in the great state of Califronia in the wonderful city of fresno. My life is like any other person's. I have a wonderful family, I have a job already. This will help me improve my work ethic. So far my life is going pretty alright. </p>
     </div>
   </section>
   <section class="primo">
@@ -34,14 +31,15 @@
       <h3>Skills</h3>
       <ul>
         <li>Micorsoft Word</li>
-        <li>Comunication</li>
-        <li></li>
+        <li>Can stay calm under pressure</li>
+        <p>More skills to be improved inbound</p>
       </ul>
     </div>
     <div>
       <h3>References</h3>
       <ul>
         <li>Benjamin</li>
+        <p>More to references on the way.</p>
       </ul>
     </div>
   </section>
