--- a/portfolio/works.html
+++ b/portfolio/works.html
@@ -8,9 +8,9 @@
   <title>My portfolio</title>
 </head>
 <body>
-  <audio autoplay loop>
+  <!-- <audio autoplay loop>
     <source src="music/Sabaton - In The Army Now (Bonus Track).mp3" type="audio/mpeg">
-  </audio>
+  </audio> -->
   <header>
     <nav>
       <ul>
@@ -21,6 +21,15 @@
     </nav>
   </header>
 <main>
+  <section class="work1">
+    <div>
+      <h2>This is one of my works that I helped with</h2>
+      <img src="img/Screenshot (2).png" alt="website I helped created">
+    </div>
+  </section>
+  <section>
+    <p>*More work to be shown after learning to do a gallery. So be patient, skills take time to develop.</p>
+  </section>
 </main>
 <footer>
   <p>Copyright © 2016 - 2016 My Porfolio. All rights reserved.</p>
