--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,7 +23,7 @@
     <img class="picture" src="img/crop.jpg" alt="Picture of Rigo">
     <div>
       <h3>Bio</h3>
-      <p>Hello my soon to be employer or friend. My name is Rigoberto Padilla the third. I was born on October 2, 1999 in the great state of Califronia in the wonderful city of fresno. My life is like any other person's. I have a wonderful family, I have a job already. This will help me improve my work ethic. So far my life is going pretty alright. </p>
+      <p>Hello my soon to be employer or friend. My name is Rigoberto Padilla the third. I was born on October 2, 1999 in the great state of Califronia in the wonderful city of fresno. My life is like any other person's. I have a wonderful family, and since I'm working already this will help me improve my work ethic.</p>
     </div>
   </section>
   <section class="primo">
