--- a/nov17-miniport/index.html
+++ b/nov17-miniport/index.html
@@ -2,32 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>miniport - pixelarity</title>
   <link rel="stylesheet" href="css/style.css">
-  <title>Document</title>
 </head>
 <body>
+  <nav id="nav">
+    <ul class="container">
+      <li><a href="#header">Top</a></li>
+      <li><a href="#article">Work</a></li>
+      <li><a href="#section">Portfolio</a></li>
+      <li><a href="#footer">Contact</a></li>
+    </ul>
+  </nav>
   <header>
-    <nav>
-      <ul>
-        <li><a href="#">Top</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section>
-      <img src="img/^7A067E1D42964A8576513CBF1E105BB24292B2006C4AA3C653^pimgpsh_fullsize_distr.jpg" alt="Picture of Jane">
-      <h1>Hi. I'm <span>Jane Doe.</span></h1>
+    <div class="image"><img src="./img/pic00.jpg" alt="picture of a cute girl"></div>
+    <div>
+      <h1>Hi. I'm <b>Jane Doe.</b></h1>
       <p>Sed enim ut Gravida, non augue, magna sodales purus orci aliquet feugiat at ut sem Cubilia nulla commodo neque nec col iaculis.</p>
-      <p>Augue morbi eget col eu</p>
-    </section>
-    <section>
-      <h2>Aenean ata col magna sit dui.</h2>
+      <a href="#">Augue morbi eget col eu</a>
+    </div>
+  </header>
+  <article>
+    <div>
+      <h1>Aenean ata col magna sit dui.</h1>
       <p>Odio turpis amet sed consequat eget posuere consequat.</p>
+    </div>
+    <div class="icons">
       <div>
         <i class="fa fa-comments-o" aria-hidden="true"></i>
         <h3>Consequat lorem</h3>
@@ -43,48 +43,95 @@
         <h3>Feugiat posuere</h3>
         <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
       </div>
+    </div>
+    <div>
       <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-      <button>Non cras at ut ornare quam</button>
-    </section>
-    <section>
+      <a href="#">Non cras at ut ornare quam</a>
+    </div>
+  </article>
+  <section>
+    <div class="top">
       <h2>Aliquam diam neque mus cras blandit.</h2>
       <p>Proin odio consequat sapien vestibulum consequat lorem dolore feugiat lorem ipsum dolore.</p>
-      <img src="img/^D01493FD936345FC8A7782EB0F31CAE69516635D0A94EC6939^pimgpsh_fullsize_distr.jpg" alt="">
-      <img src="img/^7EAFB542BBE334C511F8C2261515D30B46703B636A8EEE704D^pimgpsh_fullsize_distr.jpg" alt="">
-      <img src="img/^3C2ED176FD64168B07C049538F6573CD09852691FC264D50F2^pimgpsh_fullsize_distr.jpg" alt="">
-      <img src="img/^7601FDD5D4C3797A703714E768A5CD657FEDEF33511C0D0FF4^pimgpsh_fullsize_distr.jpg" alt="">
-      <img src="img/^2408F056110C0E750459D6A6B6BD45114EDC0D716DE79D80EE^pimgpsh_fullsize_distr.jpg" alt="">
-      <img src="img/^E9BF550D9085C82EF4F9349923ED7C1A48F011BED399472EE9^pimgpsh_fullsize_distr.jpg" alt="">
+    </div>
+    <div class="boxes">
+      <div>
+        <img src="./img/pic01.jpg" alt="picture of bright lights">
+        <h3>Magna feugiat</h3>
+        <p>Ornare nulla proin odio consequat.</p>
+      </div>
+      <div>
+        <img src="./img/pic02.jpg" alt="picture of wheat grass">
+        <h3>Veroeros primis</h3>
+        <p>Ornare nulla proin odio consequat.</p>
+      </div>
+      <div>
+        <img src="./img/pic03.jpg" alt="picture of wind mill">
+        <h3>Lorem ipsum</h3>
+        <p>Ornare nulla proin odio consequat.</p>
+      </div>
+      <div>
+        <img src="./img/pic04.jpg" alt="picture of old man on rock">
+        <h3>Tempus dolore</h3>
+        <p>Ornare nulla proin odio consequat.</p>
+      </div>
+      <div>
+        <img src="./img/pic05.jpg" alt="picture of two teenagers in the woods">
+        <h3>Feugiat aliquam</h3>
+        <p>Ornare nulla proin odio consequat.</p>
+      </div>
+      <div>
+        <img src="./img/pic06.jpg" alt="picture of grass and distant trees">
+        <h3>Sed amet ornare</h3>
+        <p>Ornare nulla proin odio consequat.</p>
+      </div>
+    </div>
+    <div>
       <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-      <button>Col id vitae cras at</button>
-    </section>
-  </main>
+      <a href="#">Col id vitae cras at</a>
+    </div>
+  </section>
   <footer>
-    <h2>Quam ut orci porta mus ante.</h2>
-    <p>Ornare nulla proin odio consequat sapien vestibulum ipsum sed lorem.</p>
-<form>
-  <div>
-      <div class="row">
-      <div class="6u 12u(mobile)"><input name="name" id="name" placeholder="Name" type="text">
-      </div>
-      <div class="6u 12u(mobile)"><input name="email" id="email" placeholder="Email" type="text"></div>
+    <div class="top">
+      <h2>Quam ut orci porta mus ante.</h2>
+      <p>Ornare nulla proin odio consequat sapien vestibulum ipsum sed lorem.</p>
     </div>
-    <div class="row">
-      <div class="12u"><input name="subject" id="subject" placeholder="Subject" type="text">
-      </div>
-    </div>
-    <div class="row"><div class="12u"><textarea name="message" id="message" placeholder="Message"></textarea>
-    </div>
-    </div>
-    <div class="row 200%">
-      <div class="12u">
-      <ul class="actions">
-        <li><input value="Send Message" type="submit"></li><li><input value="Clear Form" class="alt" type="reset"></li>
+    <div class="email">
+      <ul>
+        <li><input type="text" name="name" id="name" placeholder="Name"></li>
+        <li><input type="text" name="email" id="email" placeholder="Email"></li>
       </ul>
-      </div>
     </div>
+    <div>
+      <input type="text" name="subject" id="subject" placeholder="Subject">
+    </div>
+    <div>
+      <textarea name="message" id="message" placeholder="Message" style="margin-top: 0px; margin-bottom: 0px; height: 260px;"></textarea>
+    </div>
+    <div class="12u">
+      <ul class="actions">
+        <li><input type="submit" value="Send Message"></li>
+        <li><input type="reset" value="Clear Form" class="alt"></li>
+      </ul>
+    </div>
+  <div>
+    <hr>
+    <h3>Find me on ...</h3>
+    <ul class="social">
+      <li><a class="icon fa-twitter" style="cursor: pointer;"><span class="label">Twitter</span></a></li>
+      <li><a class="icon fa-facebook" style="cursor: pointer;"><span class="label">Facebook</span></a></li>
+      <li><a class="icon fa-dribbble" style="cursor: pointer;"><span class="label">Dribbble</span></a></li>
+      <li><a class="icon fa-linkedin" style="cursor: pointer;"><span class="label">LinkedIn</span></a></li>
+      <li><a class="icon fa-tumblr" style="cursor: pointer;"><span class="label">Tumblr</span></a></li>
+      <li><a class="icon fa-google-plus" style="cursor: pointer;"><span class="label">Google+</span></a></li>
+      <li><a class="icon fa-github" style="cursor: pointer;"><span class="label">Github</span></a></li>
+    </ul>
   </div>
-</form>
-  </footer>
+  <hr>
+  <div>
+    <p>© Untitled. All rights reserved.</p>
+  </div>
+</footer>
 </body>
+<script src="https://use.fontawesome.com/f92ae97c2a.js"></script>
 </html>
