--- a/nov17-miniport/index.html
+++ b/nov17-miniport/index.html
@@ -11,7 +11,7 @@
       <li><a href="#header">Top</a></li>
       <li><a href="#article">Work</a></li>
       <li><a href="#section">Portfolio</a></li>
-      <li><a href="#footer">Contact</a></li>
+      <li><a href="footer">Contact</a></li>
     </ul>
   </nav>
   <header>
@@ -23,7 +23,7 @@
     </div>
   </header>
   <article>
-    <div>
+    <div class="eric">
       <h1>Aenean ata col magna sit dui.</h1>
       <p>Odio turpis amet sed consequat eget posuere consequat.</p>
     </div>
@@ -44,7 +44,7 @@
         <p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
       </div>
     </div>
-    <div>
+    <div class="bottom">
       <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
       <a href="#">Non cras at ut ornare quam</a>
     </div>
@@ -86,12 +86,12 @@
         <p>Ornare nulla proin odio consequat.</p>
       </div>
     </div>
-    <div>
+    <div class="down">
       <p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
       <a href="#">Col id vitae cras at</a>
     </div>
   </section>
-  <footer>
+  <footer id="footer">
     <div class="top">
       <h2>Quam ut orci porta mus ante.</h2>
       <p>Ornare nulla proin odio consequat sapien vestibulum ipsum sed lorem.</p>
