--- a/moblo/index.html
+++ b/moblo/index.html
@@ -13,23 +13,76 @@
     <h1 class="white">MOBLO</h1>
     <p>CELLULAR REPAIR CENTER</p>
     <nav>
-      <ul>
-        <li><a href="#">ABOUT</a></li>
-        <li><a href="#">SERVICES</a></li>
-        <li><a href="#">IPHONE REPAIR</a></li>
-        <li><a href="#">NEWS</a></li>
-        <li><a href="#">COMTACTS</a></li>
+      <ul class="run">
+        <li class="not_today"><a href="#">ABOUT</a></li>
+        <li class="not_today"><a href="#">SERVICES</a></li>
+        <li class="not_today"><a href="#">IPHONE REPAIR</a></li>
+        <li class="not_today"><a href="#">NEWS</a></li>
+        <li class="not_today"><a href="#">COMTACTS</a></li>
       </ul>
     </nav>
   </header>
   <main>
     <section>
-      <h1>WE FIX BROKEN, DAMAGED CELLULAR PHONES.</h1>
+      <h1 cla>WE FIX BROKEN, DAMAGED</h1>
+      <h1>CELLULAR PHONES.</h1>
       <p>LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISC ING ELIT. SED MAURIS ERAT, ACCUMSAN FERMENTUM SIT AMET.</p>
-        <img class="same" src="img/phone_1.png" alt="">
-        <img class="same" src="img/phone_2.png" alt="">
-        <img class="same" src="img/phone_3.png" alt="">
+      <p class="fake_button">HOW IT WORKS</p>
+      <div>
+        <img class="phones" src="img/phone_1.png" alt="">
+        <img class="phones" src="img/phone_2.png" alt="">
+        <img class="phones" src="img/phone_3.png" alt="">
+      </div>
+    </section>
+    <section class="grey_background">
+      <div>
+        <img src="img/mailbox.png" alt="Mail by a box">
+        <h2 class="font">E-MAIL</h2>
+        <h4>REPAIRS</h4>
+        <p>Dolor nunc vule putateulr ips dol consem donec semp ertet laciniate ultricie upien disse comete dolo lectus fgilla itollicil tua ludin dolor nec met quam.</p>
+        <button>READ MORE</button>
+      </div>
+      <div>
+        <img src="img/tools.png" alt="Tools">
+        <h2 class="font">WALK_IN</h2>
+        <h4>REPAIRS</h4>
+        <p>Dolor nunc vule putateulr ips dol consem donec semp ertet laciniate ultricie upien disse comete dolo lectus fgilla itollicil tua ludin dolor nec met quam.</p>
+        <button>READ MORE</button>
+      </div>
+      <div>
+        <img src="img/clock.png" alt="Clock">
+        <h2 class="font">10 MINUTES</h2>
+        <h4>REPAIRS</h4>
+        <p>Dolor nunc vule putateulr ips dol consem donec semp ertet laciniate ultricie upien disse comete dolo lectus fgilla itollicil tua ludin dolor nec met quam.</p>
+        <button>READ MORE</button>
+      </div>
+    </section>
+    <section class="white_background">
+      <div>
+        <h2>WHAT WE</h2>
+        <h2><span>REPAIR</span></h2>
+        <ul>
+          <li><a class="black" href="#"><span>></span> ALL MAKES OF CELL PHONES AND PDA'S</a></li>
+          <li><a class="black" href="#"><span>></span>   IPOD AND MP3 PLAYERS</a></li>
+          <li><a class="black" href="#"><span>></span>   VIDEO GAME DEVICES*</a></li>
+          <li><a class="black" href="#"><span>></span>   LAPTOPS*</a></li>
+          <li><a class="black" href="#"><span>></span>   GPS UNITS class="not_today"</a></li>
+        </ul>
+        <p class="bond"><img src="img/marker-2.png" alt="A *">Lorem ipsum dolor sit amet, consectetur adipisc elit. Proin ultricies vestibulum velit, bibendum et condimentum metusi dolore ipsum commete sit amet ing elit.</p>
+        <button>READ MORE</button>
+      </div>
+      <div class="no_left">
+        <h2>WELCOME TO</h2>
+        <h2><span>OUR SITE</span></h2>
+      </div>
+      <div>
+        <h2>SUCCESS</h2>
+        <h2><span>STORIES</span></h2>
+      </div>
     </section>
   </main>
+  <footer>
+    <p>MOBLO © 2015 | Privacy Policy</p>
+  </footer>
 </body>
 </html>
