--- a/moblo/index.html
+++ b/moblo/index.html
@@ -74,10 +74,15 @@
       <div class="no_left">
         <h2>WELCOME TO</h2>
         <h2><span>OUR SITE</span></h2>
+        <h4><span>MES CUML DIA SED INENIAS INGERTLO ALIIQTES DOLORE IPSUM SITET AME.</span></h4>
+        <p>Nemo enim ipsam voluptatem voluptas sit. Aspernatur aut odit aut fugit sed quia consequuntur magni dolor eseos qui rationevolupta tem nesciunt lacusueni ascet dolingerto otis aliiqt sit amet eism com odictor ligulate cotameti dapibu emo enim ipsam voluptatem voluptas sit.</p>
+        <p>Nemo enim ipsam voluptatem voluptas sit. Aspernatur aut odit aut fugit sed quia consequuntur magni dolor eseos qui rationevolupta tem nesciunt lacusueni ascet dolingerto otis aliiqt sit amet eism com odictor ligulate cotameti dapibu emo enim ipsam voluptatem voluptas sit. Aspernatur aut odit aut fugit sed quia. Consequuntur magni dolores eos qui rationevoluptatem nesciunt. </p>
       </div>
       <div>
         <h2>SUCCESS</h2>
         <h2><span>STORIES</span></h2>
+        <p>“ Nemo enim ipsam voluptatem volupt asperna tur aut odit aut fugit sed quia conse quuntur magni dolor eseos qui. ” </p>
+        <i class="fa fa-user" aria-hidden="true"></i><h3>MARK SNOW</h3>
       </div>
     </section>
   </main>
