--- a/portfolio/contacts.html
+++ b/portfolio/contacts.html
@@ -8,9 +8,9 @@
   <title>My portfolio</title>
 </head>
 <body>
-  <audio autoplay loop>
+  <!-- <audio autoplay loop>
     <source src="music/Banana Phone.mp3" type="audio/mpeg">
-  </audio>
+  </audio> -->
   <header>
     <nav>
       <ul>
@@ -23,6 +23,8 @@
 <main>
   <h1><i class="fa fa-mobile" aria-hidden="true"></i>   Ways to Contact me  <i class="fa fa-envelope" aria-hidden="true"></i></h1>
   <p class="move">*You can aslo reach me by carrier pigeon.</p>
+  <a class="russia" href="socialmedia.html">Snap Me-<i class="fa fa-snapchat" aria-hidden="true"></i>-----Github Me-<i class="fa fa-github" aria-hidden="true"></i>
+</a>
 <div class="candy">
 <div class="contact">
   <h2>Cellphone #</h2>
