--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,7 +20,7 @@
 <main>
   <h1>Rigoberto Padilla III</h1>
   <section>
-    <img class="picture" src="img/crop.jpg" alt="Picture of Rigo">
+    <img class="picture" src="img/WIN_20161208_13_26_04_Pro-(2).png" alt="Picture of Rigo">
     <div>
       <h3>Bio</h3>
       <p>Hello my soon to be employer or friend. My name is Rigoberto Padilla the third. I was born on October 2, 1999 in the great state of Califronia in the wonderful city of fresno. My life is like any other person's. I have a wonderful family, and since I'm working already this will help me improve my work ethic.</p>
