--- a/portfolio/works.html
+++ b/portfolio/works.html
@@ -24,7 +24,7 @@
   <section class="work1">
     <div>
       <h2>This is one of my works that I helped with</h2>
-      <img src="img/Screenshot (2).png" alt="website I helped created">
+      <img class="make_small" src="img/Screenshot (2).png" alt="website I helped created">
     </div>
   </section>
   <section>
