--- a/jan10-intensify/index.html
+++ b/jan10-intensify/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <meta charset="utf-8">
-     <link rel="stylesheet" href="css/style.css">
-     <title>Document</title>
+      <meta charset="utf-8">
+      <link rel="stylesheet" href="css/style.css">
+      <title>Document</title>
 </head>
 <body>
   <nav>
-      <i id="sn-open" class="fa fa-bars"></i>
+      <i id="sn-" class="fa fa-bars"></i>
       <h1>intensify</h1>
       <button class="btn">Log In</button>
     <div id="sn">
