jan24-editorial, Pokemon gold is best

--- a/jan24-editorial/index.html
+++ b/jan24-editorial/index.html
@@ -6,6 +6,8 @@
   <title>Document</title>
 </head>
 <body>
+  <a href="index.html">H</a>
+  <a href="generic.html">K</a>
   <!-- Nav here
   <nav>
       <ul>
