jan24-editorial, Pokemon gold is best

--- a/jan24-editorial/index.html
+++ b/jan24-editorial/index.html
@@ -6,26 +6,64 @@
   <title>Document</title>
 </head>
 <body>
-  <a href="index.html">H</a>
-  <a href="generic.html">K</a>
-  <!-- Nav here
+  <!-- Nav here -->
   <nav>
+    <form>
+      <input type="text" name="search" placeholder="Search..">
+    </form>
       <ul>
-          <li><h5></h5></li>
+          <li><h5>Menu</h5></li>
           <hr>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li><a href="index.html">HOMEPAGE</a></li>
+          <hr>
+          <li><a href="generic.html">GENERIC</a></li>
+          <hr>
+          <li>ELEMENTS</li>
+          <hr>
+          <li>SUBMENU</li>
+          <hr>
+          <li>ETIAM DOLORE</li>
+          <hr>
+          <li>Golden</li>
+          <hr>
+          <li>ANOTHER SUBMENU</li>
+          <hr>
+          <li>Prussian</li>
+          <hr>
+          <li>CANADIAN</li>
+          <hr>
+          <li>RUSSIAN</li>
+          <hr>
       </ul>
+      <div>
+        <h5>Ante interdum</h5>
+        <img src="img/pic07.jpg">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, veniam error!</p>
+        <hr>
+        <img src="img/pic08.jpg">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, perspiciatis alias!</p>
+        <hr>
+        <img src="img/pic09.jpg">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, laborum nobis!</p>
+        <a>More</a>
+        <hr>
+      </div>
+      <footer>
+        <h5>Get in touch</h5>
+        <hr>
+        <p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+        <i class="fa fa-envelope-o" aria-hidden="true"></i>
+        <p>information@untitled.tld</p>
+        <hr>
+        <i class="fa fa-phone" aria-hidden="true"></i>
+        <p>(000)000-0000</p>
+        <hr>
+        <i class="fa fa-home" aria-hidden="true"></i>
+        <p>1234 Somewhere Road #8254 Nashville, TN 00000-0000</p>
+        <hr>
+        <p></p>
+      </footer>
   </nav>
--->
 <header>
   <span><h6>Editorial by Pixelarity</h6></span>
   <div>
