index, contacts, socialmedia, style, works, Pokemon gold is best

--- a/index.html
+++ b/index.html
@@ -4,15 +4,46 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <title>My portfolio</title>
 </head>
 <body>
-
-  <a href="portfolio">The portfolio for my life and works.</a>
-  <a href="nov14-EarthlyBlue">This is one of the projects that I have done by myself.</a>
-  <a href="nov17-miniport">Yet another project I done.</a>
-  <a href="jan30-editorial">This is a project I have done for four days and nights.</a>
-  <a href="nov16-embellished">Yet a different project I done.</a>
-
+  <header>
+    <nav>
+      <ul>
+         <li><a href="index.html">Home /</a></li>
+         <li><a href="works.html"> Works /</a></li>
+         <li><a href="contacts.html"> Contacts</a></li>
+      </ul>
+    </nav>
+  </header>
+<main>
+  <h1>Rigoberto Padilla III</h1>
+  <img class="picture" src="img/WIN_20161208_13_26_04_Pro-(2).png" alt="Picture of Rigo">
+  <section>
+    <div>
+      <h3>Bio</h3>
+      <p>Hello my soon to be employer or friend. My name is Rigoberto Padilla the third. I was born on October 2, 1999 in the great state of Califronia in the wonderful city of fresno. My life is like any other person's. I have a wonderful family, and since I'm working already this will help me improve my work ethic.</p>
+    </div>
+  </section>
+  <section class="primo">
+    <div class="skills">
+      <h3>Skills</h3>
+      <ul>
+        <li>Micorsoft Word</li>
+        <li>Can stay calm under pressure</li>
+        <p>More skills to be improved inbound</p>
+      </ul>
+      <h3>References</h3>
+      <ul>
+        <li>Benjamin</li>
+        <p>More to references on the way.</p>
+      </ul>
+    </div>
+  </section>
+</main>
+<footer>
+  <p>Copyright © 2016 - 2016 My Porfolio. All rights reserved.</p>
+</footer>
 </body>
 </html>
