img, style, works, Pokemon gold is best

--- a/works.html
+++ b/works.html
@@ -26,6 +26,18 @@
       <h2>This is one of my works that I helped with</h2>
       <img class="make_small" src="img/Screenshot (2).png" alt="website I helped created">
     </div>
+    <div>
+      <h2></h2>
+      <img src="">
+    </div>
+    <div>
+      <h2></h2>
+      <img src="">
+    </div>
+    <div>
+      <h2></h2>
+      <img src="">
+    </div>
   </section>
   <section>
     <p>*More work to be shown after learning to do a gallery. So be patient, skills take time to develop.</p>
