feb02-js-variables, Pokemon gold is best

--- a/works.html
+++ b/works.html
@@ -28,15 +28,15 @@
     </div>
     <div>
       <h2></h2>
-      <img src="">
+      <img class="make_small2" src="">
     </div>
     <div>
       <h2></h2>
-      <img src="">
+      <img class="make_small3" src="">
     </div>
     <div>
       <h2></h2>
-      <img src="">
+      <img class="make_small" src="">
     </div>
   </section>
   <section>
