feb06-js-numbers feb07-js-arrays, Windows 10 sucks

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -45,5 +45,7 @@
 <footer>
   <p>Copyright © 2016 - 2016 My Porfolio. All rights reserved.</p>
 </footer>
+
+<script src="story-script.js"></script>
 </body>
 </html>
