feb10-js-functions, Windows 10 sucks

--- a/feb14-js-functions/index.html
+++ b/feb14-js-functions/index.html
@@ -9,6 +9,8 @@
     <button id="btn1" disabled>Click here first</button>
     <button id="btn2">Click here second</button>
 
+    <div></div>
+
   <script src="js/script.js"></script>
 </body>
 </html>
