--- a/feb23-js-forms/index.html
+++ b/feb23-js-forms/index.html
@@ -6,10 +6,14 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Contact</h1>
   <p>Feel free to reach out to me.</p>
   <main>
     <form>
+      <ul>
+        <li>First</li>
+        <li>last</li>
+        <li>email</li>
+      </ul>
       <label>
       <span>First</span>
       <input type="text" name="first">
@@ -33,7 +37,7 @@
       <input type="submit" value="Submit">
     </form>
   </main>
-
+  <script src="js/md5.js"></script>
   <script src="js/script.js"></script>
 </body>
 </html>
